--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="APP Name"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://myapp.test
+APP_LOCALE=es
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
